TL-10414 totara_appraisal: Ensure collapsable section headers have a name.
Reviewed-on: https://review.totaralms.com/13338
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/totara/appraisal/less/styles.less
+++ b/totara/appraisal/less/styles.less
@@ -61,6 +61,11 @@ div.appraisal-content .mform .fitem .felement {
     .felement.fstatic {
         padding-top: @padding-small-vertical * 1.5;
     }
+
+    .action-icon.delete .flex-icon {
+        float: left;
+        margin-right: @padding-small-horizontal / 2;
+    }
 }
 
 #page-totara-appraisal-snapshot {
